--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -33,4 +33,16 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
+    #added cache actions
+      - name: Cache
+        uses: actions/cache@v2.1.6
+        with:
+    # A list of files, directories, and wildcard patterns to cache and restore
+          path: 
+    # An explicit key for restoring and saving the cache
+          key: 
+    # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
+          restore-keys: # optional
+    # The chunk size used to split up large files during upload, in bytes
+          upload-chunk-size: # optional
           echo test, and deploy your project.
