--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,19 +31,15 @@ jobs:
                   
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+        run: echo Add other actions to build,
+          # echo test, and deploy your project.
     #added cache actions
-      - name: Cache
-        uses: actions/cache@v2.1.6
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
         with:
-    # A list of files, directories, and wildcard patterns to cache and restore
-          path: 
-    # An explicit key for restoring and saving the cache
-          key: 
-    # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
-          restore-keys: # optional
-    # The chunk size used to split up large files during upload, in bytes
-          upload-chunk-size: # optional
+           path: ~/.m2/repository
+           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+           restore-keys: |
+             ${{ runner.os }}-maven-
+
           
