--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,12 +26,15 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-                  
+                       
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: echo Add other actions to build,
+      - name: setup JDK 1.5
+        uses: actions/setup-java@v1
+        with:
+           java-version: 8
+      - name: build with Ant
+        run: ant -noinput -buildfile build.xml 
+        #Ant is for building java code
           # echo test, and deploy your project.
     #added cache actions
       - name: Cache local Maven repository
