--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.restapi.classpath}:\
+    ${libs.restlib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,6 +71,7 @@ no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
